Use Java 11 in test